--- a/app/src/main/res/layout/dialog_delay_record_time_interval.xml
+++ b/app/src/main/res/layout/dialog_delay_record_time_interval.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="170dp"
-        android:minWidth="280dp"
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingTop="24dp">
@@ -18,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="间隔时间"
             android:textColor="#000000"
-            android:textSize="16sp"/>
+            android:textSize="18sp"/>
 
         <RadioGroup
             android:id="@+id/dialog_record_rg_option"
@@ -38,7 +37,7 @@
 
             <RadioButton
                 android:id="@+id/dialog_record_rb_60s"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableLeft="@drawable/custom_radio_button_drawable"
@@ -46,11 +45,12 @@
                 android:text="60s"/>
         </RadioGroup>
 
-        <TextView
+        <Button
             android:id="@+id/dialog_record_time_interval_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:background="@null"
             android:text="取消"
             android:textColor="#4B9FD5"
             android:textSize="14sp"/>
