延时播放UI界面

--- a/app/src/main/res/layout/activity_cam_delay_record.xml
+++ b/app/src/main/res/layout/activity_cam_delay_record.xml
@@ -54,8 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.6"
-                android:background="#000000"
-                android:visibility="gone"/>
+                android:background="#000000"/>
 
 
             <TextView
