好友请求为空修改

--- a/app/src/main/res/drawable/share_to_friend_check_box_seclector.xml
+++ b/app/src/main/res/drawable/share_to_friend_check_box_seclector.xml
@@ -4,4 +4,5 @@
     android:drawable="@drawable/icon_selected" /><!--选中时效果-->
 <item android:state_checked="false"
     android:drawable="@drawable/icon_not_selected" /><!--未选中时效果-->
+<item android:drawable="@drawable/icon_not_selected"/>
 </selector>
