--- a/app/src/main/res/layout/fragment_home_mine_friends_addfriends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends_addfriends.xml
@@ -1,69 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:clickable="true"
-    android:background="@color/color_white"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:clickable="true"
+    android:id="@+id/fragment_container"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/rl_home_mine_relativesandfriends"
+    <LinearLayout
+        android:orientation="vertical"
+        android:background="@color/color_white"
         android:layout_width="match_parent"
-        android:layout_height="73dp"
-        android:background="#0BA8CF">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_home_mine_relativesandfriends_add_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:padding="15dp"
+        <RelativeLayout
+            android:id="@+id/rl_home_mine_relativesandfriends"
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:background="#0BA8CF">
+
+            <ImageView
+                android:id="@+id/iv_home_mine_relativesandfriends_add_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:padding="15dp"
+                android:clickable="true"
+                android:src="@drawable/icon_nav_back_white" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="12dp"
+                android:layout_marginLeft="48dp"
+                android:text="@string/Tap3_FriendsAdd"
+                android:textColor="@color/color_white"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <EditText
+            android:focusableInTouchMode="false"
             android:clickable="true"
-            android:src="@drawable/icon_nav_back_white" />
+            android:id="@+id/et_friend_phonenumber"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:hint="@string/SHARE_ACCOUNT"
+            android:textSize="16sp"
+            android:inputType="phone"
+            android:textColorHint="@color/color_cecece"
+            android:layout_width="match_parent"
+            android:layout_height="54dp" />
 
         <TextView
+            android:id="@+id/tv_scan_add"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/Tap3_FriendsAdd_QR"
+            android:drawableLeft="@drawable/ico_scan_qrcode"
+            android:drawablePadding="15dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="12dp"
-            android:layout_marginLeft="48dp"
-            android:text="@string/Tap3_FriendsAdd"
-            android:textColor="@color/color_white"
-            android:textSize="18sp" />
-    </RelativeLayout>
+            android:layout_height="67dp" />
 
-    <EditText
-        android:focusableInTouchMode="false"
-        android:clickable="true"
-        android:id="@+id/et_friend_phonenumber"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:hint="@string/SHARE_ACCOUNT"
-        android:textSize="16sp"
-        android:inputType="phone"
-        android:textColorHint="@color/color_cecece"
-        android:layout_width="match_parent"
-        android:layout_height="54dp" />
+        <TextView
+            android:id="@+id/tv_add_from_contract"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/Tap3_FriendsAdd_Contacts"
+            android:drawableLeft="@drawable/icon_setting_information"
+            android:drawablePadding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="67dp" />
 
-    <TextView
-        android:id="@+id/tv_scan_add"
-        android:layout_marginLeft="20dp"
-        android:gravity="center_vertical"
-        android:text="@string/Tap3_FriendsAdd_QR"
-        android:drawableLeft="@drawable/ico_scan_qrcode"
-        android:drawablePadding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="67dp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_add_from_contract"
-        android:layout_marginLeft="20dp"
-        android:gravity="center_vertical"
-        android:text="@string/Tap3_FriendsAdd_Contacts"
-        android:drawableLeft="@drawable/icon_setting_information"
-        android:drawablePadding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="67dp" />
-
-</LinearLayout>
+</FrameLayout>
