--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -38,20 +38,68 @@
             android:layout_alignParentRight="true"
             android:clickable="true"
             android:padding="15dp"
-            android:text="@string/CLEAR"
+            android:text="@string/DELETE"
             android:textColor="@color/color_white"
             android:textSize="14sp" />
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcl_home_mine_message_recyclerview"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcl_home_mine_message_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:id="@+id/rl_delete_dialog"
+            android:visibility="gone"
+            android:background="#11000000"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <View
+                android:layout_alignParentTop="true"
+                android:background="#33000000"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+            <TextView
+                android:id="@+id/tv_check_all"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/color_4b9fd5"
+                android:text="@string/SELECT_ALL"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:textSize="18sp"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_delete"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/color_4b9fd5"
+                android:text="@string/DELETE"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="10dp"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:visibility="gone"
         android:id="@+id/ll_no_mesg"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
