--- a/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
+++ b/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/color_white"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/color_black"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_gravity="center_vertical"
         android:id="@+id/iv_userinfo_big_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</FrameLayout>
+        android:layout_height="wrap_content" />
+</RelativeLayout>
