--- a/app/src/main/res/layout/fragment_login_layout_register_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_register_box.xml
@@ -121,7 +121,7 @@
             style="@style/login_model_commit_style"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="37dp"
-            android:text="继续" />
+            android:text="@string/CARRY_ON" />
 
 
         <LinearLayout
