--- a/app/src/main/res/layout/fragment_mine_device_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_device_share_manager.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/tv_has_share_title"
                 android:layout_marginTop="19dp"
                 android:layout_marginLeft="15dp"
-                android:text="已分享亲友"
+                android:text="@string/Tap3_ShareDevice_Shared"
                 android:textSize="13sp"
                 android:textColor="@color/color_4b9fd5"
                 android:layout_width="wrap_content"
