--- a/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
@@ -49,7 +49,9 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             style="@style/CustomCheckboxTheme"
-            android:padding="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
