--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,6 +92,9 @@
     <color name="color_5e97df">#5e97df</color>
     <color name="color_84bcfb">#84bcfb</color>
     <color name="color_2A3C58">#2A3C58</color>
+    <color name="color_CCE1F0FF">#CCE1F0FF</color>
+    <color name="color_FFDEDEDE">#FFDEDEDE</color>
+    <color name="color_FFAAAAAA">#FFAAAAAA</color>
 
 
     <color name="background_tab_pressed">#6633B5E5</color>
