--- a/app/src/main/res/layout/layout_cam_land_live_wheel.xml
+++ b/app/src/main/res/layout/layout_cam_land_live_wheel.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="30dp"
         hunt:sw_lineColor="@color/color_FFDEDEDE"
         hunt:sw_markerColor="@color/color_36BDFF"
-        hunt:sw_maskColor="@color/color_E1F0FF"
+        hunt:sw_maskColor="@color/color_CCE1F0FF"
         hunt:sw_textColor="@color/color_FFAAAAAA" />
 
 </merge>
