--- a/app/src/main/res/layout/cam_live_port_handle_bar.xml
+++ b/app/src/main/res/layout/cam_live_port_handle_bar.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fLayout_live_port_bottom_control_bar"
     android:layout_width="match_parent"
-    android:layout_height="39dp">
+    android:layout_height="39dp"
+    android:layout_gravity="bottom">
 
     <LinearLayout
         android:id="@+id/lLayout_protection"
@@ -11,75 +13,42 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp">
 
-        <FrameLayout
-            android:id="@+id/fLayout_cam_live_protection_flip"
+        <com.cylan.jiafeigou.widget.FlipImageView
+            android:id="@+id/flip_image"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/icon_cam_protection_on" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/icon_cam_protection_off"
-                android:visibility="gone" />
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="center"
+            android:src="@drawable/icon_cam_protection_on"
+            app:flipDrawable="@drawable/icon_cam_protection_off"
+            app:flipDuration="5000"
+            app:flipInterpolator="@android:anim/bounce_interpolator"
+            app:flipRotations="y|x|z"
+            app:reverseRotation="true" />
 
         <TextView
             android:id="@+id/tv_cam_live_protection"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
             android:gravity="center_vertical"
-            android:text="安全防护"
+            android:text="@string/SECURE"
             android:textColor="@color/color_white"
             android:textSize="11sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/lLayout_live_time"
-        style="@style/ripple_background"
+    <TextView
+        android:id="@+id/tv_live_time"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_cam_live"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="直播"
-            android:textColor="@color/color_white"
-            android:textSize="11sp" />
-
-        <Space
-            android:layout_width="2dp"
-            android:layout_height="1dp" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/color_white" />
-
-        <Space
-            android:layout_width="2dp"
-            android:layout_height="1dp" />
-
-        <TextView
-            android:id="@+id/tv_cam_show_timeline"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="5/16 12:30"
-            android:textColor="@color/color_white"
-            android:textSize="11sp" />
-    </LinearLayout>
+        android:background="@drawable/flow_bg"
+        android:gravity="center_vertical"
+        android:padding="5dp"
+        android:textColor="@color/color_white"
+        android:textSize="11sp"
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/imgV_cam_zoom_to_full_screen"
