--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -36,25 +36,26 @@
         <com.cylan.jiafeigou.n.view.cam.CamLivePortWheel
             android:id="@+id/sw_cam_port_wheel"
             android:layout_width="match_parent"
-            android:layout_height="52dp" />
+            android:layout_height="52dp"
+            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/imgV_cam_switch_speaker"
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="20dp"
             android:src="@drawable/icon_speaker_normal_port_on" />
 
         <ImageView
             android:id="@+id/imgV_cam_trigger_mic"
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="10dp"
             android:src="@drawable/icon_record" />
 
