--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -1,8 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.cam.CameraLiveFragment">
 
     <FrameLayout
@@ -27,17 +26,19 @@
 
     </FrameLayout>
 
+    <com.cylan.jiafeigou.n.view.cam.CamLiveControlLayer
+        android:id="@+id/sw_cam_port_wheel"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_below="@+id/fLayout_cam_live_view"
+        android:visibility="invisible" />
+
     <FrameLayout
         android:id="@+id/fLayout_cam_live_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/fLayout_cam_live_view"
         android:layout_gravity="bottom">
-
-        <com.cylan.jiafeigou.n.view.cam.CamLivePortWheel
-            android:id="@+id/sw_cam_port_wheel"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/imgV_cam_switch_speaker"
@@ -47,7 +48,6 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="20dp"
             android:src="@drawable/icon_speaker_normal_port_on" />
 
         <ImageView
@@ -70,4 +70,4 @@
             android:padding="20dp"
             android:src="@drawable/icon_capture_selector" />
     </FrameLayout>
-</LinearLayout>
+</RelativeLayout>
