--- a/app/src/main/res/layout/fragment_home_mine_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_home_mine_bind_phone.xml
@@ -116,7 +116,7 @@
                 </FrameLayout>
 
                 <TextView
-                    android:enabled="true"
+                    android:enabled="false"
                     style="@style/login_model_commit_style"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="37dp"
