--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -243,9 +243,11 @@
 
         <TextView
             android:id="@+id/btn_home_mine_personal_information"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
             android:text="@string/LOGOUT"
             android:textColor="@color/color_ff3b30"
             android:textSize="16sp" />
